# severum-backend

./: Cargo.toml  README.md  diesel.toml
migrations/2024-12-29-003846_users/: up.sql
migrations/2024-12-29-003850_categories/: up.sql
migrations/2024-12-29-003854_challenges/: up.sql
migrations/2024-12-29-003900_containers/: up.sql
sqlx_migrations/: 20250105005607_2024-12-29-003845_roles.sql  20250105005608_2024-12-29-003846_users.sql  _2024-12-29-003854_challenges.sql
src/: main.rs  schema.rs
src/controllers/: category_controller.rs  challenge_controller.rs  container_controller.rs  errors.rs  mod.rs  user_controller.rs
src/middlewares/: jwt.rs
src/models/: category.rs  challenge.rs  claims.rs  container.rs  errors.rs  mod.rs  role.rs  user.rs
src/repositories/: category_repository.rs  challenge_repository.rs  container_repository.rs  mod.rs  user_repository.rs
src/routes/: challenge_routes.rs  mod.rs
src/services/: category_service.rs  challenge_service.rs  container_service.rs  mod.rs  user_service.rs
src/utils/: challenge_loader.rs  db.rs  docker.rs  git.rs  loader.rs  mod.rs
test/: test.js
