[package]
name = "severum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
tower-http = "0.6.2"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"