[package]
name = "severum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
tower-http = "0.6.2"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"
urlencoding = "2.1.3"
log = "0.4.22"
env_logger = "0.11.6"
git2 = "0.19.0"
